# cadence-rust-client

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTEXT.md  Cargo.toml  EXAMPLES_DEPENDENCIES.md  EXAMPLES_DESIGN.md  EXAMPLES_QUICK_REF.md  IMPLEMENTATION_GUIDE.md  README.md  docker-compose.yml  justfile
cadence-activity/: Cargo.toml
cadence-activity/src/: context.rs  lib.rs
cadence-client/: Cargo.toml
cadence-client/src/: client.rs  domain.rs  grpc.rs  lib.rs  options.rs  thrift.rs
cadence-client/src/auth/: interceptor.rs  jwt.rs  mod.rs  provider.rs
cadence-client/tests/: IMPLEMENTATION_SUMMARY.md  README.md  README_ECOMMERCE_SAGA.md  channels_spawn_integration.rs  ecommerce_saga_integration.rs  grpc_integration.rs  onboarding_reminder_integration.rs  payment_confirmation_integration.rs  thrift_integration.rs
cadence-core/: Cargo.toml
cadence-core/src/: encoded.rs  error.rs  lib.rs  types.rs
cadence-macros/: Cargo.toml
cadence-macros/src/: lib.rs
cadence-proto/: Cargo.toml  build.rs
cadence-proto/src/: conversions.rs  lib.rs  shared.rs  workflow_service.rs
cadence-proto/src/conversions/: activity.rs  decision.rs  helpers.rs  history.rs  mod.rs  shared.rs  workflow.rs
cadence-proto/tests/: conversion_tests.rs
cadence-proto/thrift/: cadence.thrift  shared.thrift
cadence-testsuite/: Cargo.toml
cadence-testsuite/src/: lib.rs  suite.rs
cadence-worker/: Cargo.toml
cadence-worker/src/: heartbeat.rs  lib.rs  local_activity_queue.rs  pollers.rs  registry.rs  replay_verifier.rs  worker.rs
cadence-worker/src/executor/: local_activity.rs  mod.rs  replay.rs  workflow.rs
cadence-worker/src/handlers/: activity.rs  decision.rs  mod.rs
cadence-worker/tests/: local_activity_test.rs  signal_query_test.rs
cadence-workflow/: Cargo.toml
cadence-workflow/src/: channel.rs  commands.rs  context.rs  dispatcher.rs  future.rs  lib.rs  side_effect_serialization.rs  state_machine.rs
cadence-workflow/tests/: channel_integration.rs
crabdance/: Cargo.toml
crabdance/src/: lib.rs  shadow.rs
crabdance/tests/: README.md  channels_spawn_integration.rs  data_converter_seam.rs  ecommerce_saga_integration.rs  grpc_integration.rs  onboarding_reminder_integration.rs  payment_confirmation_integration.rs  resources_deadpool_sqlite_integration.rs  resources_sqlx_pgpool_integration.rs  session_integration.rs
crabdance_activity/: Cargo.toml
crabdance_activity/src/: context.rs  lib.rs
crabdance_client/: Cargo.toml
crabdance_client/src/: client.rs  domain.rs  grpc.rs  lib.rs
crabdance_client/src/auth/: interceptor.rs
crabdance_client/src/error/: client.rs  mod.rs
crabdance_client/tests/: channels_spawn_integration.rs  ecommerce_saga_integration.rs  grpc_integration.rs  onboarding_reminder_integration.rs  payment_confirmation_integration.rs
crabdance_core/: Cargo.toml
crabdance_core/src/: encoded.rs  error.rs  interceptor.rs  lib.rs  propagation.rs  resources.rs
crabdance_macros/: Cargo.toml
crabdance_macros/src/: lib.rs
crabdance_proto/: Cargo.toml  build.rs
crabdance_proto/src/: workflow_service.rs
crabdance_proto/src/conversions/: domain.rs  history.rs
crabdance_proto/tests/: conversion_tests.rs
crabdance_testsuite/: Cargo.toml
crabdance_testsuite/fixtures/replay/: order_workflow.json
crabdance_testsuite/src/: env.rs  lib.rs  replay.rs  suite.rs
crabdance_worker/: Cargo.toml
crabdance_worker/src/: autoscaler.rs  heartbeat.rs  interceptor.rs  lib.rs  local_activity_queue.rs  metrics.rs  otel.rs  pollers.rs  registry.rs  replay_verifier.rs  replayer.rs  resource_tests.rs  session.rs  worker.rs
crabdance_worker/src/executor/: cache.rs  local_activity.rs  replay.rs  workflow.rs
crabdance_worker/src/handlers/: activity.rs  decision.rs
crabdance_worker/tests/: local_activity_test.rs  signal_query_test.rs
crabdance_workflow/: Cargo.toml
crabdance_workflow/src/: commands.rs  context.rs  dispatcher.rs  driver.rs  future.rs  lib.rs  local_activity.rs  session.rs  state_machine.rs
crabdance_workflow/tests/: channel_integration.rs
examples/04_workflow_signals/: Cargo.toml  README.md
examples/04_workflow_signals/src/: lib.rs  main.rs
examples/06_child_workflows/: Cargo.toml  README.md
examples/06_child_workflows/src/: lib.rs  main.rs
examples/11_client_operations/: Cargo.toml
examples/11_client_operations/src/: lib.rs  main.rs
examples/11_retry_policies/: Cargo.toml
examples/11_retry_policies/src/: lib.rs
examples/19_workflow_patterns/: Cargo.toml  README.md
examples/19_workflow_patterns/src/: lib.rs  main.rs
load_test/: Cargo.toml  README.md
load_test/src/: main.rs  worker.rs
load_test/src/activities/: cpu_intensive.rs  failing.rs  fast.rs  io_simulated.rs  mod.rs
load_test/src/cli/: args.rs  mod.rs
load_test/src/config/: mod.rs  worker_profiles.rs
load_test/src/metrics/: collector.rs  mod.rs  reporter.rs  types.rs
load_test/src/scenarios/: failure.rs  high_concurrency.rs  high_throughput.rs  mod.rs  spike_burst.rs  sustained_load.rs
load_test/src/utils/: mod.rs
load_test/src/workflows/: cpu_bound.rs  failing.rs  io_bound.rs  mod.rs  noop.rs
uber_cadence_activity/: Cargo.toml
uber_cadence_activity/src/: context.rs  lib.rs
uber_cadence_client/: Cargo.toml
uber_cadence_client/src/: client.rs  domain.rs  grpc.rs
uber_cadence_client/tests/: channels_spawn_integration.rs  ecommerce_saga_integration.rs  grpc_integration.rs  onboarding_reminder_integration.rs  payment_confirmation_integration.rs
uber_cadence_proto/: Cargo.toml  build.rs
uber_cadence_proto/tests/: conversion_tests.rs
uber_cadence_testsuite/: Cargo.toml
uber_cadence_testsuite/src/: lib.rs  suite.rs
uber_cadence_worker/: Cargo.toml
uber_cadence_worker/src/: heartbeat.rs  local_activity_queue.rs  pollers.rs  registry.rs  replay_verifier.rs  worker.rs
uber_cadence_worker/tests/: local_activity_test.rs  signal_query_test.rs
uber_cadence_workflow/: Cargo.toml
uber_cadence_workflow/src/: commands.rs  context.rs  future.rs  lib.rs  local_activity.rs  state_machine.rs
uber_cadence_workflow/tests/: channel_integration.rs
(+211 files in other folders)
