[workspace]
members = [
    "crabdance_proto",
    "crabdance_core",
    "crabdance_client",
    "crabdance_macros",
    "crabdance_worker",
    "crabdance_workflow",
    "crabdance_activity",
    "crabdance_testsuite",
    "crabdance",
    "load_test",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Carson McManus"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dyc3/cadence-rust-client"
keywords = ["cadence", "temporal", "workflow", "orchestration"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Protocol
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tonic-build = "0.12"

# Observability
tracing = "0.1"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
parking_lot = "0.12"
dashmap = "6.1"
dyn-clone = "1.0"
deadpool-sqlite = "0.10"
rusqlite = { version = "0.33", features = ["bundled"] }
sqlx = { version = "0.8", default-features = false }

# Auth
jsonwebtoken = "9"

crabdance_proto = { path = "./crabdance_proto", version = "0.2.0" }
crabdance_core = { path = "./crabdance_core", version = "0.2.0" }
crabdance_macros = { path = "./crabdance_macros", version = "0.2.0" }
crabdance_client = { path = "./crabdance_client", version = "0.2.0" }
crabdance_worker = { path = "./crabdance_worker", version = "0.2.0" }
crabdance_workflow = { path = "./crabdance_workflow", version = "0.2.0" }
crabdance_activity = { path = "./crabdance_activity", version = "0.2.0" }
crabdance_testsuite = { path = "./crabdance_testsuite", version = "0.2.0" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

[workspace.lints.clippy]
allow_attributes = "deny"
