[package]
name = "cadence-activity"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Activity authoring SDK for Cadence"

[dependencies]
cadence-proto = { path = "../cadence-proto" }
cadence-core = { path = "../cadence-core" }
cadence-macros = { path = "../cadence-macros" }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio-test = { workspace = true }
