[package]
name = "cadence-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cadence workflow client for Rust"

[dependencies]
cadence-proto = { path = "../cadence-proto" }
cadence-core = { path = "../cadence-core" }
async-trait = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
jsonwebtoken = { workspace = true }
oauth2 = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio-test = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
cadence-worker = { path = "../cadence-worker" }
cadence-workflow = { path = "../cadence-workflow" }
cadence-activity = { path = "../cadence-activity" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }