[package]
name = "cadence-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and utilities for Cadence client"

[dependencies]
cadence-proto = { path = "../cadence-proto" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio-test = { workspace = true }