[package]
name = "cadence-worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cadence worker implementation for Rust"

[dependencies]
cadence-proto = { path = "../cadence-proto" }
cadence-core = { path = "../cadence-core" }
cadence-workflow = { path = "../cadence-workflow" }
cadence-activity = { path = "../cadence-activity" }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio-test = { workspace = true }