[package]
name = "cadence-workflow"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Workflow authoring SDK for Cadence"

[dependencies]
cadence-proto = { path = "../cadence-proto" }
cadence-core = { path = "../cadence-core" }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio-test = { workspace = true }