[package]
name = "crabdance"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
description = "A Rust client for Uber Cadence workflow engine"

[dependencies]
crabdance_proto = { workspace = true }
crabdance_core = { workspace = true }
crabdance_macros = { workspace = true }
crabdance_client = { workspace = true }
crabdance_worker = { workspace = true }
crabdance_workflow = { workspace = true }
crabdance_activity = { workspace = true }
crabdance_testsuite = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
deadpool-sqlite = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
chrono = { workspace = true, features = ["serde"] }
sqlx = { workspace = true, default-features = false, features = ["postgres", "runtime-tokio", "macros"] }
uuid = { workspace = true, features = ["v4", "serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
