[package]
name = "crabdance_activity"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Activity authoring SDK for Cadence"
keywords.workspace = true

[dependencies]
crabdance_core = { workspace = true }
crabdance_macros = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
