[package]
name = "crabdance_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cadence workflow client for Rust"
keywords.workspace = true

[dependencies]
crabdance_proto = { workspace = true }
crabdance_core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rsa = { version = "0.9", features = ["pem"] }
rand = { version = "0.8" }
