[package]
name = "crabdance_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cadence workflow client for Rust"
keywords.workspace = true

[dependencies]
crabdance_proto = { workspace = true }
crabdance_core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
jsonwebtoken = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rsa = { workspace = true, features = ["pem"] }
rand = { workspace = true }
