[package]
name = "crabdance_macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for Cadence workflows and activities"
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
