[package]
name = "crabdance_testsuite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Testing utilities for Cadence workflows and activities"
keywords.workspace = true

[dependencies]
crabdance_core = { workspace = true }
crabdance_workflow = { workspace = true }
crabdance_activity = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
