[package]
name = "crabdance_worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cadence worker implementation for Rust"
keywords.workspace = true

[dependencies]
crabdance_proto = { workspace = true }
crabdance_core = { workspace = true }
crabdance_workflow = { workspace = true }
crabdance_activity = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
dyn-clone = { workspace = true }

[dev-dependencies]
