[package]
name = "crabdance_worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cadence worker implementation for Rust"
keywords.workspace = true

[dependencies]
crabdance_proto = { workspace = true }
crabdance_core = { workspace = true }
crabdance_workflow = { workspace = true }
crabdance_activity = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
metrics = { workspace = true }
dashmap = { workspace = true }
dyn-clone = { workspace = true }

[dev-dependencies]
# `test-util` enables tokio's paused-clock test runtime (`start_paused`), used to
# assert rate-limiter pacing deterministically without real sleeps.
tokio = { workspace = true, features = ["full", "test-util"] }
