[package]
name = "crabdance_workflow"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Workflow authoring SDK for Cadence"
keywords.workspace = true

[dependencies]
crabdance_proto = { workspace = true }
crabdance_core = { workspace = true }
crabdance_macros = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true }

[dev-dependencies]
