[package]
name = "load_test"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# Workspace crates
uber_cadence_client = { path = "../uber_cadence_client", package = "uber_cadence_client" }
uber_cadence_worker = { path = "../uber_cadence_worker", package = "uber_cadence_worker" }
uber_cadence_workflow = { path = "../uber_cadence_workflow", package = "uber_cadence_workflow" }
uber_cadence_activity = { path = "../uber_cadence_activity", package = "uber_cadence_activity" }
uber_cadence_core = { path = "../uber_cadence_core", package = "uber_cadence_core" }
uber_cadence_proto = { path = "../uber_cadence_proto", package = "uber_cadence_proto" }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Metrics
hdrhistogram = "7.5"
sysinfo = "0.31"

# Async/Utils (from workspace)
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Additional
rand = "0.8"
chrono = { workspace = true }

[[bin]]
name = "load_test"
path = "src/main.rs"
