[package]
name = "load_test"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# Workspace crates
crabdance_client = { workspace = true }
crabdance_worker = { workspace = true }
crabdance_workflow = { workspace = true }
crabdance_activity = { workspace = true }
crabdance_core = { workspace = true }
crabdance_proto = { workspace = true }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Metrics
hdrhistogram = "7.5"
sysinfo = "0.31"

# Async/Utils (from workspace)
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Additional
rand = "0.8"
chrono = { workspace = true }

[[bin]]
name = "load_test"
path = "src/main.rs"
