[package]
name = "load_test"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# Workspace crates
crabdance_client = { workspace = true }
crabdance_worker = { workspace = true }
crabdance_workflow = { workspace = true }
crabdance_activity = { workspace = true }
crabdance_core = { workspace = true }
crabdance_proto = { workspace = true }

# CLI
clap = { workspace = true, features = ["derive", "env"] }

# Metrics
hdrhistogram = { workspace = true }
sysinfo = { workspace = true }

# Async/Utils (from workspace)
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
parking_lot = { workspace = true }

# Additional
rand = { workspace = true }

[[bin]]
name = "load_test"
path = "src/main.rs"
