[package]
name = "uber_cadence_activity"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Activity authoring SDK for Cadence"

[dependencies]
uber_cadence_proto = { workspace = true }
uber_cadence_core = { workspace = true }
uber_cadence_macros = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio-test = { workspace = true }
