[package]
name = "uber_cadence_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cadence workflow client for Rust"

[dependencies]
uber_cadence_proto = { path = "../uber_cadence_proto", package = "uber_cadence_proto" }
uber_cadence_core = { path = "../uber_cadence_core", package = "uber_cadence_core" }
async-trait = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
jsonwebtoken = { workspace = true }
oauth2 = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio-test = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
uber_cadence_worker = { path = "../uber_cadence_worker", package = "uber_cadence_worker" }
uber_cadence_workflow = { path = "../uber_cadence_workflow", package = "uber_cadence_workflow" }
uber_cadence_activity = { path = "../uber_cadence_activity", package = "uber_cadence_activity" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rsa = { version = "0.9", features = ["pem"] }
rand = { version = "0.8" }
