[package]
name = "uber_cadence_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cadence workflow client for Rust"

[dependencies]
uber_cadence_proto = { workspace = true }
uber_cadence_core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
jsonwebtoken = { workspace = true }
oauth2 = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio-test = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
uber_cadence_worker = { workspace = true }
uber_cadence_workflow = { workspace = true }
uber_cadence_activity = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rsa = { version = "0.9", features = ["pem"] }
rand = { version = "0.8" }
