[package]
name = "uber_cadence_testsuite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Testing utilities for Cadence workflows and activities"

[dependencies]
uber_cadence_proto = { path = "../uber_cadence_proto", package = "uber_cadence_proto" }
uber_cadence_core = { path = "../uber_cadence_core", package = "uber_cadence_core" }
uber_cadence_workflow = { path = "../uber_cadence_workflow", package = "uber_cadence_workflow" }
uber_cadence_activity = { path = "../uber_cadence_activity", package = "uber_cadence_activity" }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
