[package]
name = "uber_cadence_testsuite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Testing utilities for Cadence workflows and activities"

[dependencies]
uber_cadence_proto = { workspace = true }
uber_cadence_core = { workspace = true }
uber_cadence_workflow = { workspace = true }
uber_cadence_activity = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
