[package]
name = "client_operations"
version = "0.1.0"
edition = "2021"
description = "Client API patterns - starting workflows, signals, queries, and management"
publish = false

[dependencies]
uber_cadence_client = { path = "../../uber_cadence_client", package = "uber_cadence_client" }
uber_cadence_worker = { path = "../../uber_cadence_worker", package = "uber_cadence_worker" }
uber_cadence_workflow = { path = "../../uber_cadence_workflow", package = "uber_cadence_workflow" }
uber_cadence_activity = { path = "../../uber_cadence_activity", package = "uber_cadence_activity" }
uber_cadence_core = { path = "../../uber_cadence_core", package = "uber_cadence_core" }
uber_cadence_testsuite = { path = "../../uber_cadence_testsuite", package = "uber_cadence_testsuite" }
examples_common = { path = "../examples-common", package = "examples_common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
